[package]
name = "eqformat_pfs"
version = "0.2.0"
authors = ["Martin Lindhe <martin@ubique.se>"]
edition = "2018"
license = "MIT"
description = "Parser for PFS archive format used in Everquest resources (.s3d, .eqg, .pfs, .pak)"
repository = "https://github.com/martinlindhe/eqformat_pfs"

[dependencies]
inflate = "0.4"

[workspace]
members = [
    "extract-pfs",
]
