[package]
name = "eqformat_pfs"
version = "0.2.1"
authors = ["Martin Lindhe <martin@ubique.se>"]
edition = "2021"
license = "MIT"
description = "Parser for PFS archive format used in Everquest resources (.s3d, .eqg, .pfs, .pak)"
repository = "https://github.com/martinlindhe/eqformat_pfs"

[dependencies]
inflate = "0.4"
clap = "3.0"

[lib]
name = "eqformat_pfs"
path = "src/lib.rs"

[[bin]]
name = "extract-pfs"
path = "extract-pfs/main.rs"
